--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,9 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+audio {
+  display: none;
+}
 .container {
   position: relative;
   width: 100%;
@@ -28,7 +31,7 @@ h1.easeText.header {
   font-size: 80px;
   text-align: center;
   text-wrap: wrap;
-  z-index: 1;
+  z-index: 3;
 }
 p.easeText.description {
   text-align: center;
@@ -38,7 +41,7 @@ p.easeText.description {
   position: absolute;
   right: 8%;
   text-wrap: wrap;
-  z-index: 1;
+  z-index: 3;
   font-size: 20px;
 }
 
@@ -49,8 +52,7 @@ p.easeText.description {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 0;
-  perspective: 500px;
+  z-index: 2;
   overflow: hidden;
   text-align: center;
 }
@@ -62,14 +64,17 @@ img {
 }
 .container {
   position: absolute;
+  z-index: 0;
 }
-.animation.wraper {
+.backgroundImage.heroPage {
   background-image: url("./img/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  z-index: 3;
+  z-index: 1;
   position: absolute;
   width: 100%;
   height: 100%;
+  position: absolute;
+  transform-origin: center center;
 }
